# nAUDIT

./: .coverage  .gitignore  README.md  naudit.sh  pyproject.toml  run_audit.ps1  run_audit.sh
Trash/: audit.sh  auditv2.sh  auditv3.sh  visualizations.py  visualizations2.py
n_audit/: code_analysis.py  core.py  infrastructure.py  main.py  recommendations.py  security.py  tests_analysis.py  utils.py  visualizations.py
n_audit/plugins/: sample_plugin.py
project_report/: requirements.txt
v.naudit/: pyvenv.cfg
v.naudit/Scripts/: activate  activate.bat  jsonpointer
